{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "1cb9019f-5098-44a6-a778-1026fc989eb8",
            "actions": [
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0702cb05-7b90-443c-8ad8-b4f64ff9f875",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputX",
                    "type": "Button",
                    "id": "4afc7aa1-e87d-4f1b-a24a-49ae6a839ce1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InputY",
                    "type": "Button",
                    "id": "09cc1506-9ae1-49cf-8a8e-34e2545fb801",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee79dbe9-dc7d-4d06-a78f-82d6b330cbdc",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "f2a601d3-2f10-4721-930f-3decbc628fdc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "43cbca4d-4765-4b55-ad07-6bc6e64d6907",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "97036c61-8042-4cc8-bf48-b0fa18c7b619",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "fed3c66c-e146-46df-b848-905c9cae4447",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "39c8779e-b165-46ef-9214-ae65df24e9c3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "004a0937-bc85-4e02-b02a-883993b1337f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputY",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}